--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             padding: 1rem;
             box-sizing: border-box;
             transition: background-color 0.3s, color 0.3s;
-            padding-top: env(safe-area-inset-top);
-            padding-bottom: env(safe-area-inset-bottom);
+            padding-top: env(safe-area-inset-top); /* iPhoneなどでノッチを避ける */
+            padding-bottom: env(safe-area-inset-bottom); /* iPhoneなどでノッチを避ける */
         }
 
         .dark-mode {
@@ -52,7 +52,7 @@
 
         #counters {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: repeat(2, 1fr); /* デフォルトは2列 */
             grid-gap: 1rem;
             padding: 1rem;
             width: 100%;
@@ -72,8 +72,8 @@
             text-align: center;
             transition: transform 0.2s, background-color 0.3s, color 0.3s;
             width: 100%;
-            max-width: 300px;
-            height: 100%;
+            max-width: 300px; /* カウンターの最大幅を設定 */
+            height: 100%; /* カウンターの高さをボタンの高さに対応させる */
             box-sizing: border-box;
         }
 
@@ -101,9 +101,9 @@
         }
 
         .remaining {
-            font-size: 1rem; /* サイズを小さく変更 */
+            font-size: 1.2rem;
             color: inherit;
-            white-space: nowrap;
+            white-space: nowrap; /* テキストが折り返されないようにする */
         }
 
         .amount {
@@ -118,11 +118,11 @@
         }
 
         button {
-            width: 50%;
-            aspect-ratio: 1 / 1;
-            max-width: 100px;
-            max-height: 100px;
-            font-size: calc(1.2rem + 0.2vw);
+            width: 50%; /* ボタンの幅をカウンターコンテナの幅の50%に設定 */
+            aspect-ratio: 1 / 1; /* ボタンのアスペクト比を1:1に設定 */
+            max-width: 100px; /* ボタンの最大幅を設定 */
+            max-height: 100px; /* ボタンの最大高さを設定 */
+            font-size: calc(1.2rem + 0.2vw); /* 幅に応じてfont-size調整 */
             border: none;
             border-radius: 8px;
             background-color: var(--button-bg);
@@ -148,8 +148,8 @@
         }
 
         .icon-plus::before, .icon-minus::before {
-            font-size: calc(1.2rem + 0.2vw);
-            content: attr(data-icon);
+            font-size: calc(1.2rem + 0.2vw); /* ボタンのサイズに応じてアイコンのフォントサイズを調整 */
+            content: attr(data-icon); /* アイコンの内容を設定 */
         }
 
         .totals-container {
@@ -214,15 +214,16 @@
         .chart-container {
             flex: 1;
             max-width: 100%;
-            margin: 10px 5px;
+            margin: 10px 5px; /* 円グラフの間隔を調整 */
             display: flex;
             justify-content: center;
             box-sizing: border-box;
         }
 
         @media (min-width: 769px) {
+            /* 横向きやPC用の調整 */
             #counters {
-                grid-template-columns: repeat(5, 1fr);
+                grid-template-columns: repeat(5, 1fr); /* 1行に5つ */
                 grid-gap: 1rem;
                 justify-items: center;
                 justify-content: center;
@@ -233,7 +234,7 @@
             }
 
             .counter-container h2, .count, .remaining, .amount {
-                font-size: 1.5rem;
+                font-size: 1.5rem; /* フォントサイズ調整 */
             }
 
             .count {
@@ -241,37 +242,71 @@
             }
 
             button {
-                width: 40%;
+                width: 40%; /* PC用の画面ではもう少し小さくする */
             }
 
             .charts-section {
-                flex-direction: row;
-                justify-content: center;
+                flex-direction: row; /* グラフを横に配置 */
+                justify-content: center; /* 中央寄せに調整 */
             }
 
             .chart-container {
                 max-width: 400px;
-                margin: 0 5px;
+                margin: 0 5px; /* 円グラフの間隔を調整 */
             }
         }
 
+       @media (max-width: 768px) {
+    /* 縦向き用の調整 */
+    .portrait #counters {
+        grid-template-columns: repeat(2, 1fr); /* 縦向きの場合は2列 */
+        grid-template-rows: repeat(3, 1fr); /* 3行 */
+    }
+
+    .landscape #counters {
+        grid-template-columns: repeat(3, 1fr); /* 横向きの場合は3列 */
+        grid-template-rows: repeat(2, 1fr); /* 2行 */
+    }
+
+    .landscape.mobile #counters {
+        grid-template-columns: repeat(3, 1fr); /* 横向きスマホの場合は3列 */
+        grid-template-rows: auto auto; /* 自動調整 */
+        grid-template-areas:
+          "item1 item2 item3"
+          "item4 item5 .";
+    }
+
+    .counter-container {
+        width: 100%;
+        padding: 1rem;
+    }
+
+    .charts-section {
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .chart-container {
+        max-width: 100%;
+        margin: 10px 0;
+    }
+}
+
         @media (max-width: 768px) {
+            /* 縦向き用の調整 */
             .portrait #counters {
-                grid-template-columns: repeat(2, 1fr);
-                grid-template-rows: repeat(3, 1fr);
+                grid-template-columns: repeat(2, 1fr); /* 縦向きの場合は2列 */
+                grid-template-rows: repeat(3, 1fr); /* 3行 */
             }
 
             .landscape #counters {
-                grid-template-columns: repeat(3, 1fr);
-                grid-template-rows: repeat(2, 1fr);
+                grid-template-columns: repeat(3, 1fr); /* 横向きの場合は3列 */
+                grid-template-rows: repeat(2, 1fr); /* 2行 */
             }
 
             .landscape.mobile #counters {
-                grid-template-columns: repeat(3, 1fr);
-                grid-template-rows: auto auto;
-                grid-template-areas:
-                  "item1 item2 item3"
-                  "item4 item5 .";
+                grid-template-columns: 1fr 1fr 1fr; /* 横向きスマホの場合は3列 */
+                grid-template-rows: 1fr 1fr; /* 2行 */
             }
 
             .counter-container {
@@ -290,8 +325,11 @@
             }
         }
     </style>
+    <!-- Firebase App (the core Firebase SDK) -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <!-- Firebase Realtime Database -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <!-- Include Chart.js and the data labels plugin from CDN -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
 </head>
@@ -306,7 +344,7 @@
     </div>
     <div class="current-day" id="current-day">現在の設定: 1日目</div>
     <div class="counters-section">
-        <div id="counters" class="landscape">
+        <div id="counters" class="landscape"> <!-- 初期クラスを設定 -->
             <div class="counter-container" id="plain-counter" style="border-top: 5px solid #007BFF;">
                 <h2>プレーン</h2>
                 <div class="count" id="plain-count">0/30</div>
@@ -416,16 +454,16 @@
                 for (let type in counters) {
                     const count = parseInt(counters[type], 10) || 0;
                     const remaining = limits[currentDay][type] - count;
-                    document.getElementById(`${type}-count`).innerText = `${count}/${limits[currentDay][type]}`;
-                    document.getElementById(`${type}-remaining`).innerText = remaining === 0 ? '売り切れ' : `残り: ${remaining} 個`;
-                    document.getElementById(`${type}-amount`).innerText = `${count * values[type]} 円`;
+                    document.getElementById(${type}-count).innerText = ${count}/${limits[currentDay][type]};
+                    document.getElementById(${type}-remaining).innerText = remaining === 0 ? '売り切れ' : 残り: ${remaining} 個;
+                    document.getElementById(${type}-amount).innerText = ${count * values[type]} 円;
                 }
                 updateTotals(counters);
                 updatePieCharts(counters);
             }
 
             function changeCount(type, delta) {
-                const currentCountRef = countersRef.child(`${currentDay}/${type}`);
+                const currentCountRef = countersRef.child(${currentDay}/${type});
                 currentCountRef.transaction(count => {
                     const newCount = (parseInt(count, 10) || 0) + delta;
                     if (newCount >= 0 && newCount <= limits[currentDay][type]) {
@@ -449,8 +487,8 @@
                 const totalCount = Object.values(counters).reduce((sum, count) => sum + (parseInt(count, 10) || 0), 0);
                 const totalAmount = Object.entries(counters).reduce((sum, [key, count]) => sum + ((parseInt(count, 10) || 0) * values[key]), 0);
 
-                document.getElementById('total-count').innerText = `総数量: ${totalCount} 個`;
-                document.getElementById('total-amount').innerText = `総金額: ${totalAmount} 円`;
+                document.getElementById('total-count').innerText = 総数量: ${totalCount} 個;
+                document.getElementById('total-amount').innerText = 総金額: ${totalAmount} 円;
             }
 
             function createPieChart(canvasId, title, backgroundColors, unit) {
@@ -478,7 +516,7 @@
                                 color: '#fff',
                                 formatter: (value, context) => {
                                     if (value > 0) {
-                                        return `${context.chart.data.labels[context.dataIndex]}: ${value}${unit}`;
+                                        return ${context.chart.data.labels[context.dataIndex]}: ${value}${unit};
                                     } else {
                                         return '';
                                     }
@@ -495,17 +533,17 @@
 
             function updatePieCharts(counters) {
                 const countData = [
-                    parseInt(counters.plain, 10) || 0,
-                    parseInt(counters.choco, 10) || 0,
-                    parseInt(counters.strawberry, 10) || 0,
-                    parseInt(counters.matcha, 10) || 0,
+                    parseInt(counters.plain, 10) || 0, 
+                    parseInt(counters.choco, 10) || 0, 
+                    parseInt(counters.strawberry, 10) || 0, 
+                    parseInt(counters.matcha, 10) || 0, 
                     parseInt(counters.jdk, 10) || 0
                 ];
                 const valueData = [
-                    (parseInt(counters.plain, 10) || 0) * values.plain,
-                    (parseInt(counters.choco, 10) || 0) * values.choco,
-                    (parseInt(counters.strawberry, 10) || 0) * values.strawberry,
-                    (parseInt(counters.matcha, 10) || 0) * values.matcha,
+                    (parseInt(counters.plain, 10) || 0) * values.plain, 
+                    (parseInt(counters.choco, 10) || 0) * values.choco, 
+                    (parseInt(counters.strawberry, 10) || 0) * values.strawberry, 
+                    (parseInt(counters.matcha, 10) || 0) * values.matcha, 
                     (parseInt(counters.jdk, 10) || 0) * values.jdk
                 ];
 
@@ -519,7 +557,7 @@
             function confirmDayChange(selectedDay) {
                 countersRef.child(currentDay).off('value');
                 currentDay = selectedDay === '1' ? 'day1' : 'day2';
-                document.getElementById('current-day').innerText = `現在の設定: ${currentDay === 'day1' ? '1日目' : '2日目'}`;
+                document.getElementById('current-day').innerText = 現在の設定: ${currentDay === 'day1' ? '1日目' : '2日目'};
                 countersRef.child(currentDay).once('value').then(snapshot => {
                     updateUI(snapshot.val() || {});
                 });
@@ -537,6 +575,7 @@
             mediaQuery.addEventListener('change', applyTheme);
             applyTheme(mediaQuery);
 
+            // ユーザーエージェントを使用してデバイスの種類を判定
             function getDeviceType() {
                 const ua = navigator.userAgent;
                 if (/Mobi|Android/i.test(ua)) {
@@ -554,6 +593,7 @@
                 countersElement.classList.add('desktop');
             }
 
+            // 画面の向きを監視してCSSクラスを変更
             function updateOrientation() {
                 const isPortrait = window.matchMedia("(orientation: portrait)").matches;
                 if (isPortrait) {
@@ -571,6 +611,7 @@
             window.addEventListener('orientationchange', updateOrientation);
             window.addEventListener('resize', updateOrientation);
 
+            // 初期表示時の向きを設定
             updateOrientation();
 
             window.changeCount = changeCount;
