--- a/index.html
+++ b/index.html
@@ -233,9 +233,14 @@
                 padding: 1.5rem;
             }
 
-            .counter-container h2, .count, .remaining, .amount {
-                font-size: 1.1rem; /* フォントサイズ調整 */
-            }
+            .counter-container h2, .count, .amount {
+        font-size: 1.5rem; /* フォントサイズ調整 */
+    }
+
+    .remaining {
+        font-size: 1.2rem; /* 横画面時の残り個数の表示サイズを個別に調整 */
+    }
+}
 
             .count {
                 font-size: 2.2rem;
