--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         }
 
         .remaining {
-            font-size: 1.3rem;
+            font-size: 30vw;
             color: inherit;
             white-space: nowrap; /* テキストが折り返されないようにする */
         }
