--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>リアルタイムカウンター</title>
+    <title>幸せのカステラ屋さん</title>
     <style>
         :root {
             --primary-color: #007BFF;
@@ -96,7 +96,7 @@
         }
 
         .count {
-            font-size: 1.8rem;
+            font-size: 1.7rem;
             margin: 10px 0;
         }
 
@@ -243,7 +243,7 @@
 }
 
             .count {
-                font-size: 2.2rem;
+                font-size: 1.8rem;
             }
 
             button {
