--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         }
 
         .day-select {
-            margin-bottom: 1.5rem;
+            margin: 1.8rem 0 1.5rem; /* 位置を少し下に調整 */
             text-align: center;
             width: 100%;
         }
